# salary_watcher

./: .env  .env_docker  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_main.py
auth/: auth.py  database.py  manager.py  schemas.py
migrations/: env.py
migrations/versions/: 0f5fbfe38cd8_database_creation.py
models/: models.py
