[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["reDasha <kucepina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.29.0"
fastapi = "^0.111.0"
fastapi-users = "^13.0.0"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
fastapi-users-db-sqlalchemy = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

