[tool.poetry]
name = "salary_watcher"
version = "0.1.0"
description = ""
authors = ["reDasha <kucepina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.29.0"
fastapi = "^0.111.0"
fastapi-users = "^13.0.0"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
fastapi-users-db-sqlalchemy = "^6.0.1"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
pytest-asyncio = "^0.23.7"
asyncpg = "^0.29.0"
gunicorn = "^22.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"



[tool.poetry.group.dev.dependencies]
setuptools = "^70.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

